--- a/wiki/threads/3320.md
+++ b/wiki/threads/3320.md
@@ -4,316 +4,99 @@
 ---
 <strong><span style="color:#34a7f9;">Qelifern</span>:</strong>
 
-<span style="font-size:calc(13px + 5px);">First of all, this is the first time I&#39;m releasing something this big, it has taken a long time to even get to this point with these staffs.
-Hopefully everything is included in the download, however if something is missing, point it out in the comments.</span>
-
-The current state of these Staffs are W.I.P
-However they are complete with sounds, animations and effects.
-The only thing missing is the charge up sounds.
-Also I&#39;ve got no clue how to limit the viewmodel FOV to cover up the poor Treyarch animations.
-
-You have full access to all the scripts, ripped from Bo3 with Cerberus (Scobalula) then modified.
-
-Here is a Youtube video showing the staves in action.
-[MEDIA=youtube]O5ADs6PvpAg[/MEDIA]
-
-Some changes have been made since.
-
-A full credits list is included in the download but I want to thank HarryBo21 and Scobalula especially.
-
-HarryBo21&#39;s FX Library is required:
-<a href="https://www.t7mods.com/viewtopic.php?f=4&t=9">https://www.t7mods.com/viewtopic.php?f=4&amp;t=9</a>
-
-Almost all the scripts come from or originated from Scobalula&#39;s Cerberus so many thanks to you sir.
-
-<span style="font-size:calc(13px + 5px);">Instructions for installation and upgrade steps are also included.</span>
-
-
-[ATTACH width=&quot;318px&quot; alt=&quot;792&quot;]792[/ATTACH][ATTACH width=&quot;500px&quot; alt=&quot;793&quot;]793[/ATTACH]
-
-
-
-<span style="font-size:calc(13px + 6px);">&quot;Don&#39;t be a jerk&quot;, please if you use this to create content, give credit where credit is due.</span>
-
-
-
-[ATTACH width=&quot;312px&quot; alt=&quot;794&quot;]794[/ATTACH][ATTACH width=&quot;321px&quot; alt=&quot;795&quot;]795[/ATTACH]
-
-
-
-<span style="font-size:calc(13px + 5px);">Staff Code Names</span>
-staff_fire_zm
-staff_fire_upgraded_zm
-staff_air_zm
-staff_air_upgraded_zm
-staff_lightning_zm
-staff_lightning_upgraded_zm
-staff_water_zm
-staff_water_upgraded_zm
-
-Ex. /give staff_fire
-
-
-<span style="font-size:calc(13px + 5px);">If you run into troubles when installing, make sure you read through all the steps and see if you missed something before commenting.</span>
-
-\------------------------------------------
-
-                   <span style="font-size:calc(13px + 5px);"><a href="https://mega.nz/file/urx0QYhD#CUpJ_bc-r0ovLhYaaZMvrKhkAkbqRPgHklrxilVZAJ0">DOWNLOAD</a>  v1.0.1</span>
-
-\------------------------------------------
-
-<span style="font-size:calc(13px + 5px);"><strong>Credits:</strong></span>
-AllModz
-AndyWhelen
-Azsry
-BluntStuffy
-Collie
-DTZxPorter
-Easyskanka
-Erthrock
-Frost Iceforge
-GerardS0406
-HarryBo21
-HitmanVere
-Hubashuba
-IperBreach
-JAMAKINBACONMAN
-JBird632
-JiffyNoodles
-Lilrifa
-MAKECENTS
-MZSlayer
-MadGaz
-Magicman
-Mathfag
-NoobForLunch
-PCModder
-ProGamerzFTW
-ProRevenge
-Raptroes
-RedSpace200
-Scobalula
-Sethnorris
-Smasher248
-StevieWonder87
-Symbo
-TheIronicTruth
-TheSkyeLord
-TomBMX
-Treyarch and Activision
-Will Luffey
-WillJones1989
-Yen466
-Zeroy
-alexbgt
-thezombieproject
+<p><span style="font-size:calc(13px + 5px);">First of all, this is the first time I&#39;m releasing something this big, it has taken a long time to even get to this point with these staffs.<br />Hopefully everything is included in the download, however if something is missing, point it out in the comments.</span><br /><br />The current state of these Staffs are W.I.P<br />However they are complete with sounds, animations and effects.<br />The only thing missing is the charge up sounds.<br />Also I&#39;ve got no clue how to limit the viewmodel FOV to cover up the poor Treyarch animations.<br /><br />You have full access to all the scripts, ripped from Bo3 with Cerberus (Scobalula) then modified.<br /><br />Here is a Youtube video showing the staves in action.<br />[MEDIA=youtube]O5ADs6PvpAg[/MEDIA]<br /><br />Some changes have been made since.<br /><br />A full credits list is included in the download but I want to thank HarryBo21 and Scobalula especially.<br /><br />HarryBo21&#39;s FX Library is required:<br /><a href="https://www.t7mods.com/viewtopic.php?f=4&t=9">https://www.t7mods.com/viewtopic.php?f=4&amp;t=9</a><br /><br />Almost all the scripts come from or originated from Scobalula&#39;s Cerberus so many thanks to you sir.<br /><br /><span style="font-size:calc(13px + 5px);">Instructions for installation and upgrade steps are also included.</span><br /><br /><br />[ATTACH type=&quot;full&quot; width=&quot;318px&quot; alt=&quot;792&quot;]792[/ATTACH][ATTACH type=&quot;full&quot; width=&quot;500px&quot; alt=&quot;793&quot;]793[/ATTACH]<br /><br /><br /><br /><span style="font-size:calc(13px + 6px);">&quot;Don&#39;t be a jerk&quot;, please if you use this to create content, give credit where credit is due.</span><br /><br /><br /><br />[ATTACH type=&quot;full&quot; width=&quot;312px&quot; alt=&quot;794&quot;]794[/ATTACH][ATTACH type=&quot;full&quot; width=&quot;321px&quot; alt=&quot;795&quot;]795[/ATTACH]<br /><br /><br /><br /><span style="font-size:calc(13px + 5px);">Staff Code Names</span><br />staff_fire_zm<br />staff_fire_upgraded_zm<br />staff_air_zm<br />staff_air_upgraded_zm<br />staff_lightning_zm<br />staff_lightning_upgraded_zm<br />staff_water_zm<br />staff_water_upgraded_zm<br /><br />Ex. /give staff_fire<br /><br /><br /><span style="font-size:calc(13px + 5px);">If you run into troubles when installing, make sure you read through all the steps and see if you missed something before commenting.</span><br /><br />------------------------------------------<br /><br />                   <span style="font-size:calc(13px + 5px);"><a href="https://mega.nz/file/urx0QYhD#CUpJ_bc-r0ovLhYaaZMvrKhkAkbqRPgHklrxilVZAJ0">DOWNLOAD</a>  v1.0.1</span><br /><br />------------------------------------------<br /><br /><span style="font-size:calc(13px + 5px);"><strong>Credits:</strong></span><br />AllModz<br />AndyWhelen<br />Azsry<br />BluntStuffy<br />Collie<br />DTZxPorter<br />Easyskanka<br />Erthrock<br />Frost Iceforge<br />GerardS0406<br />HarryBo21<br />HitmanVere<br />Hubashuba<br />IperBreach<br />JAMAKINBACONMAN<br />JBird632<br />JiffyNoodles<br />Lilrifa<br />MAKECENTS<br />MZSlayer<br />MadGaz<br />Magicman<br />Mathfag<br />NoobForLunch<br />PCModder<br />ProGamerzFTW<br />ProRevenge<br />Raptroes<br />RedSpace200<br />Scobalula<br />Sethnorris<br />Smasher248<br />StevieWonder87<br />Symbo<br />TheIronicTruth<br />TheSkyeLord<br />TomBMX<br />Treyarch and Activision<br />Will Luffey<br />WillJones1989<br />Yen466<br />Zeroy<br />alexbgt<br />thezombieproject</p>
 
 ---
 <strong><span style="color:#34a7f9;">Pepergogo</span>:</strong>
 
-Thank you soooo much for this! &#128588;
+<p>Thank you soooo much for this! &#128588;</p>
 
 ---
 <strong><span style="color:#34a7f9;">brack5501</span>:</strong>
 
-What a great job brother &#128516; I really loved seeing the progress of your work! crack !! &lt;3
+<p>What a great job brother &#128516; I really loved seeing the progress of your work! crack !! &lt;3</p>
 
 ---
 <strong><span style="color:#34a7f9;">ProfessorWeeWoo</span>:</strong>
 
-awesome stuff! :cool::eek:
+<p>awesome stuff! :cool::eek:</p>
 
 ---
 <strong><span style="color:#34a7f9;">Dilly</span>:</strong>
 
-Amazing work love it, cant wait to try them thanks :D
+<p>Amazing work love it, cant wait to try them thanks :D</p>
 
 ---
 <strong><span style="color:#34a7f9;">Dilly</span>:</strong>
 
-File is no longer available for me?
+<p>File is no longer available for me?</p>
 
 ---
 <strong><span style="color:#34a7f9;">Qelifern</span>:</strong>
 
-<blockquote>File is no longer available for me?
-</blockquote>
-Should be now, it got messed up for some reason...
+<p><blockquote>File is no longer available for me?<br /></blockquote><br />Should be now, it got messed up for some reason...</p>
 
 ---
 <strong><span style="color:#34a7f9;">DestinyDobby</span>:</strong>
 
-my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?
+<p>my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?</p>
 
 ---
 <strong><span style="color:#34a7f9;">Qelifern</span>:</strong>
 
-<blockquote>my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?
-</blockquote>
-I get that aswell, I think it&#39;s to do with SSI settings in Radiant, not sure though.
+<p><blockquote>my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?<br /></blockquote><br />I get that aswell, I think it&#39;s to do with SSI settings in Radiant, not sure though.</p>
 
 ---
 <strong><span style="color:#34a7f9;">panzersoldat</span>:</strong>
 
-How do I get the genesis spawner actor ?
+<p>How do I get the genesis spawner actor ?</p>
 
 ---
 <strong><span style="color:#34a7f9;">Philip-p</span>:</strong>
 
-link for the fx arent working cant download them
+<p>link for the fx arent working cant download them</p>
 
 ---
 <strong><span style="color:#34a7f9;">CaramelFudge</span>:</strong>
 
-link to the fx has been removed you should contact the author if you want them, don&#39;t hold your breath though,
+<p>link to the fx has been removed you should contact the author if you want them, don&#39;t hold your breath though,</p>
 
 ---
 <strong><span style="color:#34a7f9;">CaramelFudge</span>:</strong>
 
-this conflicts with the apothicon servant // id say the anims are to blame  
-
-and the well known soul box&#39;s //
-
-side note the pillar is missing textures/camos 
-as well as the crystal that too shows up as the defualt test texture
-
-worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.
+<p>this conflicts with the apothicon servant // id say the anims are to blame  <br /><br />and the well known soul box&#39;s //<br /><br />side note the pillar is missing textures/camos <br />as well as the crystal that too shows up as the defualt test texture<br /><br />worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.</p>
 
 ---
 <strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
-<blockquote>this conflicts with the apothicon servant // id say the anims are to blame 
-
-and the well known soul box&#39;s //
-
-side note the pillar is missing textures/camos
-as well as the crystal that too shows up as the defualt test texture
-
-worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.
-</blockquote>
-Considering those were issues with my last release - it’s pretty obv what’s gone on here...
+<p><blockquote>this conflicts with the apothicon servant // id say the anims are to blame <br /><br />and the well known soul box&#39;s //<br /><br />side note the pillar is missing textures/camos<br />as well as the crystal that too shows up as the defualt test texture<br /><br />worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.<br /></blockquote><br />Considering those were issues with my last release - it’s pretty obv what’s gone on here...</p>
 
 ---
 <strong><span style="color:#34a7f9;">CaramelFudge</span>:</strong>
 
-Well me fixed it, i did, sir yes i did.
+<p>Well me fixed it, i did, sir yes i did.</p>
 
 ---
 <strong><span style="color:#34a7f9;">CaramelFudge</span>:</strong>
 
-Also harry it soumds like your accusing this guy of publishing your work? Be specific please dude this is how 9/11 became a inside job haha
+<p>Also harry it soumds like your accusing this guy of publishing your work? Be specific please dude this is how 9/11 became a inside job haha</p>
 
 ---
 <strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
-No but having the same asset issues means it obv is just the assets from my pack
-
-haven’t looked at the rest
-
-can’t really “steal” ported assets
+<p>No but having the same asset issues means it obv is just the assets from my pack<br /><br />haven’t looked at the rest<br /><br />can’t really “steal” ported assets</p>
 
 ---
 <strong><span style="color:#34a7f9;">CaramelFudge</span>:</strong>
 
-<blockquote>No but having the same asset issues means it obv is just the assets from my pack
-
-haven’t looked at the rest
-
-can’t really “steal” ported assets
-</blockquote>
-
-I bet he just copy pasted that asset pack like a bitch, haha jk nah either way good to see some quality stuff up here again wish i could contribute but sadly all the good stuff been taken down,  HydraX for one I only recently found out about,.. makes me sad :/ hahaha
+<p><blockquote>No but having the same asset issues means it obv is just the assets from my pack<br /><br />haven’t looked at the rest<br /><br />can’t really “steal” ported assets<br /></blockquote><br /><br />I bet he just copy pasted that asset pack like a bitch, haha jk nah either way good to see some quality stuff up here again wish i could contribute but sadly all the good stuff been taken down,  HydraX for one I only recently found out about,.. makes me sad :/ hahaha</p>
 
 ---
 <strong><span style="color:#34a7f9;">TheGobMob</span>:</strong>
 
-I keep getting this error can someone help
-
-
-
-
-&quot;D:\SteamLibrary\steamapps\common\Call of Duty Black Ops III\sound\snd_convert.exe&quot;  pc usermaps\zm_eliguy_house usermaps\zm_eliguy_house zone_source usermaps\zm_eliguy_house english zm_eliguy_house
-
-ERROR: D:\SteamLibrary\steamapps\common\Call of Duty Black Ops III\share\raw\sound\aliases\staves_aliases.csv
-
-ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_airstaff_tornado
-
-ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_imp_lightningstaff
-
-ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias lightning_ball
-
-ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias shock_effect
-
-ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_freeze_zombie
-
-ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_storm
-
-ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_storm_imp
-
-
-
-ERROR: d:\steamlibrary\steamapps\common\call of duty black ops iii\share\raw\sound\aliases\staves_aliases.csv
-
-ERROR: &#39;wpn_airstaff_tornado&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_airstaff_tornado had empty field VolumeGroup.
-
-ERROR: &#39;wpn_imp_lightningstaff&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_imp_lightningstaff had empty field VolumeGroup.
-
-ERROR: &#39;wpn_airstaff_tornado&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_airstaff_tornado had empty field DuckGroup.
-
-ERROR: &#39;wpn_imp_lightningstaff&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_imp_lightningstaff had empty field DuckGroup.
-
-ERROR: &#39;lightning_ball&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. lightning_ball had empty field VolumeGroup.
-
-ERROR: &#39;lightning_ball&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. lightning_ball had empty field DuckGroup.
-
-ERROR: &#39;shock_effect&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. shock_effect had empty field VolumeGroup.
-
-ERROR: &#39;shock_effect&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. shock_effect had empty field DuckGroup.
-
-ERROR: &#39;wpn_waterstaff_freeze_zombie&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_freeze_zombie had empty field VolumeGroup.
-
-ERROR: &#39;wpn_waterstaff_freeze_zombie&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_freeze_zombie had empty field DuckGroup.
-
-ERROR: &#39;wpn_waterstaff_storm&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_storm had empty field VolumeGroup.
-
-ERROR: &#39;wpn_waterstaff_storm&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm had empty field DuckGroup.
-
-ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field VolumeGroup.
-
-ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0
-
-ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field DuckGroup.
+<p>I keep getting this error can someone help<br /><br /><br /><br /><br />&quot;D:\SteamLibrary\steamapps\common\Call of Duty Black Ops III\sound\snd_convert.exe&quot;  pc usermaps\zm_eliguy_house usermaps\zm_eliguy_house zone_source usermaps\zm_eliguy_house english zm_eliguy_house<br /><br />ERROR: D:\SteamLibrary\steamapps\common\Call of Duty Black Ops III\share\raw\sound\aliases\staves_aliases.csv<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_airstaff_tornado<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_imp_lightningstaff<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias lightning_ball<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias shock_effect<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_freeze_zombie<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_storm<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_storm_imp<br /><br /><br /><br />ERROR: d:\steamlibrary\steamapps\common\call of duty black ops iii\share\raw\sound\aliases\staves_aliases.csv<br /><br />ERROR: &#39;wpn_airstaff_tornado&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_airstaff_tornado had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_imp_lightningstaff&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_imp_lightningstaff had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_airstaff_tornado&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_airstaff_tornado had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_imp_lightningstaff&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_imp_lightningstaff had empty field DuckGroup.<br /><br />ERROR: &#39;lightning_ball&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. lightning_ball had empty field VolumeGroup.<br /><br />ERROR: &#39;lightning_ball&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. lightning_ball had empty field DuckGroup.<br /><br />ERROR: &#39;shock_effect&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. shock_effect had empty field VolumeGroup.<br /><br />ERROR: &#39;shock_effect&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. shock_effect had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_freeze_zombie&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_freeze_zombie had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_freeze_zombie&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_freeze_zombie had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_storm had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field DuckGroup.</p>
 
 ---
 <strong><span style="color:#34a7f9;">CaramelFudge</span>:</strong>
 
-Dis error occurs becuase  the alias is set up wrong in my experience 
-
-If you go to your sound  aliases  in the csv mentioned you&#39;ll probably find 
-\# &lt;------ that at the top. Remove it
+<p>Dis error occurs becuase  the alias is set up wrong in my experience <br /><br />If you go to your sound  aliases  in the csv mentioned you&#39;ll probably find <br /># &lt;------ that at the top. Remove it</p>
