--- a/wiki/threads/3709.md
+++ b/wiki/threads/3709.md
@@ -4,26 +4,19 @@
 ---
 <strong><span style="color:#34a7f9;">bubba443</span>:</strong>
 
-<img src="1160">
-How does one fix this? Is it from overlapping brushes or is it from too many vertices in my map?
+<p><img src="1160"><br />How does one fix this? Is it from overlapping brushes or is it from too many vertices in my map?</p>
 
 ---
 <strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
-thats what happens when you rip maps with husky XD
-and ya too many verts
+<p>thats what happens when you rip maps with husky XD<br />and ya too many verts</p>
 
 ---
 <strong><span style="color:#34a7f9;">Wakaveli_</span>:</strong>
 
-<blockquote><img src="1160">
-How does one fix this? Is it from overlapping brushes or is it from too many vertices in my map?
-</blockquote>
-How did you end up fixing this? Just too many verts yeah?
+<p><blockquote><img src="1160"><br />How does one fix this? Is it from overlapping brushes or is it from too many vertices in my map?<br /></blockquote><br />How did you end up fixing this? Just too many verts yeah?</p>
 
 ---
 <strong><span style="color:#34a7f9;">bubba443</span>:</strong>
 
-yup. 
-<blockquote>How did you end up fixing this? Just too many verts yeah?
-</blockquote>
+<p>yup. <br /><blockquote>How did you end up fixing this? Just too many verts yeah?<br /></blockquote></p>
