--- a/wiki/threads/3831.md
+++ b/wiki/threads/3831.md
@@ -4,63 +4,21 @@
 ---
 <strong><span style="color:#34a7f9;">Debino</span>:</strong>
 
-
-This simple zombies template is for the newer people starting in the mod tools.
-L3AK Mod is needed for this template to work (<a href="https://wiki.modme.co/wiki/black_ops_3/lua_(lui)/Installation.html">L3AKMOD</a>)
-if there are any issues or bugs please report them ASAP
-[MEDIA=youtube]dMnuErsUtAw[/MEDIA]
-
-\-LUA HUD (default factory HUD)
-\-Perk sounds fix
-\-Player voices (voxes) added
-\-Mystery Boxes
-\-Dogs added/ fix (option to disable/ enable dogs)
-\-Changeable PaP Camo
-\-Changeable Starting weapon
-\-Changeable Player health
-\-Changeable Death machine
-\-Changeable Perk limit
-\-Changeable Starting points
-\-Changeable Zombie speed/ Health
-\-Dev commands
-\-Perk shaders
-\-Powerlag fix (no lag when power is turned on)
-\-Bo4 max ammo
-
-
-
-10/31/2021 - v1.1 Initial release (happy Halloween)
-11/2/2021 - v1.2 Added missing scripts (my fault lol)
-11/5/2021 - v1.3 Replaced Robits shaders with Humphreys
-
-
-
-<a href="https://mega.nz/file/jEETQKAa#DFKzJ6PXXXUKmFllOI0CQlTvVhZQ1g7y_aoUc2WckCE">DOWNLOAD v1.3</a>
-
-
-
-<strong>CREDITS:</strong>
-\-Debino -- Making the template (no need to give me credit)
-\-HarryBo21 -- Perk Sounds, Mystery Boxes, Player Vox, etc
-\-Devraw Team -- Dog Prefab, Enable/ Disable Dogs, Pap Camo, Starting Weapon, Powerlag Fix, etc
-\-RudySPG -- Perk Lights
-\-Humphrey -- Perk Shaders
-\-Crazydude55 -- Player Health
-\-Sphynx&#39;s -- Console Commands
-
-
-
-[ATTACH width=&quot;500px&quot; alt=&quot;1275&quot;]1275[/ATTACH]
-<a href="https://mega.nz/file/3U0hjaKS#AuQOOe9ntEAWFHjvkzZUWfAX-8AjCVycB99wteI_lQE">Bubbly Download</a>
-
-
-
-[ATTACH width=&quot;500px&quot; alt=&quot;1276&quot;]1276[/ATTACH]
-<a href="https://mega.nz/file/XRkWzTSI#OcvEJOR7SWPp9PtOjyD6YXxv9u2X5trOw5_CTe6ZoBo">Blutig Download</a>
-
-
+<p>
+This simple zombies template is for the newer people starting in the mod tools.<br />L3AK Mod is needed for this template to work (<a href="https://wiki.modme.co/wiki/black_ops_3/lua_(lui)/Installation.html">L3AKMOD</a>)<br />if there are any issues or bugs please report them ASAP<br />[MEDIA=youtube]dMnuErsUtAw[/MEDIA]<br />
+-LUA HUD (default factory HUD)<br />-Perk sounds fix<br />-Player voices (voxes) added<br />-Mystery Boxes<br />-Dogs added/ fix (option to disable/ enable dogs)<br />-Changeable PaP Camo<br />-Changeable Starting weapon<br />-Changeable Player health<br />-Changeable Death machine<br />-Changeable Perk limit<br />-Changeable Starting points<br />-Changeable Zombie speed/ Health<br />-Dev commands<br />-Perk shaders<br />-Powerlag fix (no lag when power is turned on)<br />-Bo4 max ammo<br />
+<br />
+10/31/2021 - v1.1 Initial release (happy Halloween)<br />11/2/2021 - v1.2 Added missing scripts (my fault lol)<br />11/5/2021 - v1.3 Replaced Robits shaders with Humphreys<br />
+<br />
+<a href="https://mega.nz/file/jEETQKAa#DFKzJ6PXXXUKmFllOI0CQlTvVhZQ1g7y_aoUc2WckCE">DOWNLOAD v1.3</a><br />
+<br /><br /><strong>CREDITS:</strong><br />-Debino -- Making the template (no need to give me credit)<br />-HarryBo21 -- Perk Sounds, Mystery Boxes, Player Vox, etc<br />-Devraw Team -- Dog Prefab, Enable/ Disable Dogs, Pap Camo, Starting Weapon, Powerlag Fix, etc<br />-RudySPG -- Perk Lights<br />-Humphrey -- Perk Shaders<br />-Crazydude55 -- Player Health<br />-Sphynx&#39;s -- Console Commands<br />
+<br />
+[ATTACH type=&quot;full&quot; width=&quot;500px&quot; alt=&quot;1275&quot;]1275[/ATTACH]<br /><a href="https://mega.nz/file/3U0hjaKS#AuQOOe9ntEAWFHjvkzZUWfAX-8AjCVycB99wteI_lQE">Bubbly Download</a><br />
+<br />
+[ATTACH type=&quot;full&quot; width=&quot;500px&quot; alt=&quot;1276&quot;]1276[/ATTACH]<br /><a href="https://mega.nz/file/XRkWzTSI#OcvEJOR7SWPp9PtOjyD6YXxv9u2X5trOw5_CTe6ZoBo">Blutig Download</a><br />
+</p>
 
 ---
 <strong><span style="color:#34a7f9;">Debino</span>:</strong>
 
--Added Blutig and Bubbly perk shader (11/18/2021)
+<p>-Added Blutig and Bubbly perk shader (11/18/2021)</p>
