--- a/wiki/threads/3835.md
+++ b/wiki/threads/3835.md
@@ -4,5 +4,4 @@
 ---
 <strong><span style="color:#34a7f9;">BetiroVal</span>:</strong>
 
-Just some custom perk machines for Timeslip &amp; Blaze Phase (placed into the default Giant Map)
-<img src="1270"><img src="1271">
+<p>Just some custom perk machines for Timeslip &amp; Blaze Phase (placed into the default Giant Map)<br /><img src="1270"><img src="1271"></p>
