--- a/wiki/threads/3846.md
+++ b/wiki/threads/3846.md
@@ -4,37 +4,14 @@
 ---
 <strong><span style="color:#34a7f9;">THAN0S</span>:</strong>
 
-When both Madgaz and Logical&#39;s perk packs are combined on a map the Banana Colada perk overlaps the ICU perk from Logical&#39;s pack. I&#39;ve seen both perk packs combined on the &quot;Town of the Tormented&quot; custom map so what&#39;s the secret to fixing this? It&#39;d be helpful for the people looking to combine both packs in their map in the future
-
-<img src="1279"><img src="1280">
+<p>When both Madgaz and Logical&#39;s perk packs are combined on a map the Banana Colada perk overlaps the ICU perk from Logical&#39;s pack. I&#39;ve seen both perk packs combined on the &quot;Town of the Tormented&quot; custom map so what&#39;s the secret to fixing this? It&#39;d be helpful for the people looking to combine both packs in their map in the future<br /><br /><img src="1279"><img src="1280"></p>
 
 ---
 <strong><span style="color:#34a7f9;">D-2-K</span>:</strong>
 
-the problem is 
-they both use the same specialty names 
-
-&quot;from banana colada GSH file&quot; 
-\#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;
-
-&quot;From icu gsh&quot;
-
-\#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;
+<p>the problem is <br />they both use the same specialty names <br /><br />&quot;from banana colada GSH file&quot; <br />#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;<br /><br />&quot;From icu gsh&quot;<br /><br />#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;</p>
 
 ---
 <strong><span style="color:#34a7f9;">THAN0S</span>:</strong>
 
-<blockquote>the problem is
-they both use the same specialty names
-
-&quot;from banana colada GSH file&quot;
-\#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;
-
-&quot;From icu gsh&quot;
-
-\#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;
-</blockquote>
-
-ok thank you now how exactly do I change that properly
-Edit: (FIXED IT W)
-[ATTACH alt=&quot;unknown (6).png&quot;]1281[/ATTACH]
+<p><blockquote>the problem is<br />they both use the same specialty names<br /><br />&quot;from banana colada GSH file&quot;<br />#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;<br /><br />&quot;From icu gsh&quot;<br /><br />#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;<br /></blockquote><br /><br />ok thank you now how exactly do I change that properly<br />Edit: (FIXED IT W)<br />[ATTACH alt=&quot;unknown (6).png&quot;]1281[/ATTACH]</p>
