--- a/wiki/threads/3847.md
+++ b/wiki/threads/3847.md
@@ -4,16 +4,14 @@
 ---
 <strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
 
-Is it possible to turn a Prefab I made with Brushes into an XModel?
+<p>Is it possible to turn a Prefab I made with Brushes into an XModel?</p>
 
 ---
 <strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
-[URL unfurl=&quot;true&quot;]https://github.com/ardivee/Radler/releases/tag/v0.2[/URL]
+<p><a href="https://github.com/ardivee/Radler/releases/tag/v0.2">https://github.com/ardivee/Radler/releases/tag/v0.2</a></p>
 
 ---
 <strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
 
-<blockquote>[URL unfurl=&quot;true&quot;]https://github.com/ardivee/Radler/releases/tag/v0.2[/URL]
-</blockquote>
-thanks :)
+<p><blockquote><a href="https://github.com/ardivee/Radler/releases/tag/v0.2">https://github.com/ardivee/Radler/releases/tag/v0.2</a><br /></blockquote><br />thanks :)</p>
