--- a/wiki/threads/3848.md
+++ b/wiki/threads/3848.md
@@ -4,4 +4,4 @@
 ---
 <strong><span style="color:#34a7f9;">ShadingYT</span>:</strong>
 
-[CENTER]How do i use spiki panzer? i did everything its only the radiant part remains[/CENTER]
+<p>[CENTER]How do i use spiki panzer? i did everything its only the radiant part remains[/CENTER]</p>
