--- a/wiki/threads/3627.md
+++ b/wiki/threads/3627.md
@@ -4,35 +4,29 @@
 ---
 <strong><span style="color:#34a7f9;">Bocy</span>:</strong>
 
-Hi, could someone please post the .obj Zombies in Spaceland map &#128556; Thanks!
+<p>Hi, could someone please post the .obj Zombies in Spaceland map &#128556; Thanks!</p>
 
 ---
 <strong><span style="color:#34a7f9;">eDeK</span>:</strong>
 
-[URL unfurl=&quot;true&quot;]https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/[/URL]
+<p><a href="https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/">https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/</a></p>
 
 ---
 <strong><span style="color:#34a7f9;">Bocy</span>:</strong>
 
-<blockquote>[URL unfurl=&quot;true&quot;]https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/[/URL]
-</blockquote>
-Thanks for this :] is very useful, but I need the entire map
+<p><blockquote><a href="https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/">https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/</a><br /></blockquote><br />Thanks for this :] is very useful, but I need the entire map</p>
 
 ---
 <strong><span style="color:#34a7f9;">kikail</span>:</strong>
 
-<blockquote>Thanks for this :] is very useful, but I need the entire map
-</blockquote>
-U can just use Husky of you have the game
+<p><blockquote>Thanks for this :] is very useful, but I need the entire map<br /></blockquote><br />U can just use Husky of you have the game</p>
 
 ---
 <strong><span style="color:#34a7f9;">Bocy</span>:</strong>
 
-<blockquote>U can just use Husky of you have the game
-</blockquote>
-Hi, I know Husky, but unfortunately I don&#39;t own the game on PC but only on PS4 :] Thanks!
+<p><blockquote>U can just use Husky of you have the game<br /></blockquote><br />Hi, I know Husky, but unfortunately I don&#39;t own the game on PC but only on PS4 :] Thanks!</p>
 
 ---
 <strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
 
-Pretty late, but here it is if you still need it: <a href="https://mega.nz/file/5wFBFIwJ#s9wEXJ26XoE6ak7HnGkd0_bNALAQ42edh0G1gGZ8EX0">download</a>
+<p>Pretty late, but here it is if you still need it: <a href="https://mega.nz/file/5wFBFIwJ#s9wEXJ26XoE6ak7HnGkd0_bNALAQ42edh0G1gGZ8EX0">download</a></p>
