--- a/wiki/threads/3833.md
+++ b/wiki/threads/3833.md
@@ -4,18 +4,14 @@
 ---
 <strong><span style="color:#34a7f9;">ReQiuYTPL</span>:</strong>
 
-Hello! i have a problem with the refleftion proble, the doors don&#39;t stop the light, there&#39;s a lot of light from the door, i tried a lot of things, changing textures, changing the door model, creating a new map, a lot of things, and nothing.
-I attached a photo, to see how it is.
-the walls are 16 thickness, i need help xd. Thank for all help!
-pd: i can&#39;t attach photos i don&#39;t know why.
+<p>Hello! i have a problem with the refleftion proble, the doors don&#39;t stop the light, there&#39;s a lot of light from the door, i tried a lot of things, changing textures, changing the door model, creating a new map, a lot of things, and nothing.<br />I attached a photo, to see how it is.<br />the walls are 16 thickness, i need help xd. Thank for all help!<br />pd: i can&#39;t attach photos i don&#39;t know why.</p>
 
 ---
 <strong><span style="color:#34a7f9;">Brodie3750</span>:</strong>
 
-Would help if we could see the photo
-If you can get it attached it might make it easier to help you out
+<p>Would help if we could see the photo<br />If you can get it attached it might make it easier to help you out</p>
 
 ---
 <strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
-imma slap you with a &quot;deal with it&quot; although i think on the light you can select &quot;probe only&quot; or something like that. never tried tho
+<p>imma slap you with a &quot;deal with it&quot; although i think on the light you can select &quot;probe only&quot; or something like that. never tried tho</p>
