--- a/wiki/threads/3836.md
+++ b/wiki/threads/3836.md
@@ -4,9 +4,9 @@
 ---
 <strong><span style="color:#34a7f9;">sauce</span>:</strong>
 
-ive installed harrybo21s nova crawlers and they work fine except for the part where they do not explode or have any gas at all, if anyone else has had this problem and solved it would you mind telling me how to fix it?
+<p>ive installed harrybo21s nova crawlers and they work fine except for the part where they do not explode or have any gas at all, if anyone else has had this problem and solved it would you mind telling me how to fix it?</p>
 
 ---
 <strong><span style="color:#34a7f9;">D-2-K</span>:</strong>
 
-have you installed the <a href="https://mega.nz/file/CHg2jCyB#drrmgHZY_23SuElj8mpnY-QekGCYkzJMA9qzxQXQnYM">FX library</a>
+<p>have you installed the <a href="https://mega.nz/file/CHg2jCyB#drrmgHZY_23SuElj8mpnY-QekGCYkzJMA9qzxQXQnYM">FX library</a></p>
