--- a/wiki/threads/3839.md
+++ b/wiki/threads/3839.md
@@ -4,37 +4,29 @@
 ---
 <strong><span style="color:#34a7f9;">easyskanka</span>:</strong>
 
-was a good run boys, thanks for all the help on here over the years
+<p>was a good run boys, thanks for all the help on here over the years</p>
 
 ---
 <strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
-We’re making a new forum. Don’t worry
+<p>We’re making a new forum. Don’t worry</p>
 
 ---
 <strong><span style="color:#34a7f9;">Duck</span>:</strong>
 
-<blockquote>We’re making a new forum. Don’t worry
-</blockquote>
-OOOO what&#39;s it gonna be called so I know where to go?
+<p><blockquote>We’re making a new forum. Don’t worry<br /></blockquote><br />OOOO what&#39;s it gonna be called so I know where to go?</p>
 
 ---
 <strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
-Probably we&#39;ll reopen t7mods.com but if that falls through for whatever reason it&#39;ll be boatsandhoesbo3modding.com
+<p>Probably we&#39;ll reopen t7mods.com but if that falls through for whatever reason it&#39;ll be boatsandhoesbo3modding.com</p>
 
 ---
 <strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
-<blockquote>Probably we&#39;ll reopen t7mods.com but if that falls through for whatever reason it&#39;ll be boatsandhoesbo3modding.com
-</blockquote>
-Perfect as long as you don’t want ppl registering - as he had that turned off literally the entire time on the last one
-
-Who needs members or the ability to post eh
-
-You’ll have to wait 6 months for him to glitch the shit out of vanguard anyway
+<p><blockquote>Probably we&#39;ll reopen t7mods.com but if that falls through for whatever reason it&#39;ll be boatsandhoesbo3modding.com<br /></blockquote><br />Perfect as long as you don’t want ppl registering - as he had that turned off literally the entire time on the last one<br /><br />Who needs members or the ability to post eh<br /><br />You’ll have to wait 6 months for him to glitch the shit out of vanguard anyway</p>
 
 ---
 <strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
-can you stop acting like a 4 year old?
+<p>can you stop acting like a 4 year old?</p>
