--- a/wiki/threads/3841.md
+++ b/wiki/threads/3841.md
@@ -4,28 +4,14 @@
 ---
 <strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
 
-Ported an animation of this doorway blowing up, and it looks like it&#39;s fully working in APE, but when I try it in game, it looks as if half of the wooden shards aren&#39;t animated and just appear instantly.
-
-<img src="1273">
-
-<img src="1274">
-
-This is my first time working with animations, so apologies if it&#39;s an easy fix.
+<p>Ported an animation of this doorway blowing up, and it looks like it&#39;s fully working in APE, but when I try it in game, it looks as if half of the wooden shards aren&#39;t animated and just appear instantly.<br /><br /><img src="1273"><br /><br /><img src="1274"><br /><br />This is my first time working with animations, so apologies if it&#39;s an easy fix.</p>
 
 ---
 <strong><span style="color:#34a7f9;">eDeK</span>:</strong>
 
-[MEDIA=youtube]XoSGVRUTkA0[/MEDIA]
-
-[MEDIA=youtube]c_JN-jJW7tI[/MEDIA]
+<p>[MEDIA=youtube]XoSGVRUTkA0[/MEDIA]<br /><br />[MEDIA=youtube]c_JN-jJW7tI[/MEDIA]</p>
 
 ---
 <strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
 
-<blockquote>[MEDIA=youtube]XoSGVRUTkA0[/MEDIA]
-
-[MEDIA=youtube]c_JN-jJW7tI[/MEDIA]
-</blockquote>
-That&#39;s the vid I followed at first, and tried the tag_origin fix and didn&#39;t seem to work.
-
-Although, if it fully plays in APE with no issues, would it be a problem with MAYA?
+<p><blockquote>[MEDIA=youtube]XoSGVRUTkA0[/MEDIA]<br /><br />[MEDIA=youtube]c_JN-jJW7tI[/MEDIA]<br /></blockquote><br />That&#39;s the vid I followed at first, and tried the tag_origin fix and didn&#39;t seem to work.<br /><br />Although, if it fully plays in APE with no issues, would it be a problem with MAYA?</p>
