--- a/wiki/threads/3842.md
+++ b/wiki/threads/3842.md
@@ -4,30 +4,24 @@
 ---
 <strong><span style="color:#34a7f9;">ShadingYT</span>:</strong>
 
-Can someone please send me a panzer i need one(harrybo21 if you see this dm me discord Retarded Cat#6703)
+<p>Can someone please send me a panzer i need one(harrybo21 if you see this dm me discord Retarded Cat#6703)</p>
 
 ---
 <strong><span style="color:#34a7f9;">D-2-K</span>:</strong>
 
-<a href="https://www.devraw.net/">this</a>
+<p><a href="https://www.devraw.net/">this</a></p>
 
 ---
 <strong><span style="color:#34a7f9;">ShadingYT</span>:</strong>
 
-<blockquote><a href="https://www.devraw.net/">this</a>
-</blockquote>
-My game crash using it even tho i did all steps
+<p><blockquote><a href="https://www.devraw.net/">this</a><br /></blockquote><br />My game crash using it even tho i did all steps</p>
 
 ---
 <strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
-you can use my AI. i did most of the main bosses from the game. check the list
-[URL unfurl=&quot;true&quot;]https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/[/URL]
+<p>you can use my AI. i did most of the main bosses from the game. check the list<br /><a href="https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/">https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/</a></p>
 
 ---
 <strong><span style="color:#34a7f9;">ShadingYT</span>:</strong>
 
-<blockquote>you can use my AI. i did most of the main bosses from the game. check the list
-[URL unfurl=&quot;true&quot;]https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/[/URL]
-</blockquote>
-It really confused me i used it b4 but i couldnt know like how to set up panzer spawnpoint and stuff
+<p><blockquote>you can use my AI. i did most of the main bosses from the game. check the list<br /><a href="https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/">https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/</a><br /></blockquote><br />It really confused me i used it b4 but i couldnt know like how to set up panzer spawnpoint and stuff</p>
