--- a/wiki/threads/3849.md
+++ b/wiki/threads/3849.md
@@ -4,103 +4,38 @@
 ---
 <strong><span style="color:#34a7f9;">KillRideMasterJ</span>:</strong>
 
-Has anyone seen this error before?. i just put in harrys apothicans margwas and panzer. it gives me this error.
-
-\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*
-
-UNRECOVERABLE ERROR:
-
-^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering
-
-
-Linker will now terminate.
-
-\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*
-has anyone seen it before? I&#39;ve peeked through all the materials and can&#39;t find anything out of the ordinary. it was originally 
-right after &#39;c_zom_dlc4_apothicon_fury_dissolve&#39; in the first error in the linker, but in subsequent links it&#39;s just been under the usual weapon 
-camo errors.  
-<img src="1282">
-Thanks in advance!
+<p>Has anyone seen this error before?. i just put in harrys apothicans margwas and panzer. it gives me this error.<br /><br />********************************************************************************<br /><br />UNRECOVERABLE ERROR:<br /><br />^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering<br /><br /><br />Linker will now terminate.<br /><br />********************************************************************************<br />has anyone seen it before? I&#39;ve peeked through all the materials and can&#39;t find anything out of the ordinary. it was originally <br />right after &#39;c_zom_dlc4_apothicon_fury_dissolve&#39; in the first error in the linker, but in subsequent links it&#39;s just been under the usual weapon <br />camo errors.  <br /><img src="1282"><br />Thanks in advance!</p>
 
 ---
 <strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
-You are missing materials 
-
-Download my fx pack from devraw
+<p>You are missing materials <br /><br />Download my fx pack from devraw</p>
 
 ---
 <strong><span style="color:#34a7f9;">KillRideMasterJ</span>:</strong>
 
-So i downloaded and installed them last night. I thought I had them, but I guess I didn&#39;t or I had an older version. But the error persists :( 
-Same error as before &#39;fx combo texture&#39; something or other.. i also found this up above the usual weapon camo error. Unsure if it&#39;s related but anything that can help at this point :/
-
-
-
-^1Unable to open xcam file C:\Program Files (x86)\Steam\steamapps\common\Call of Duty Black Ops III\xanim_export\black_ops_3\xcams\ui_cam_cac_equip_shockcharge.xcam_export for xcam ui_cam_cac_equip_shockcharge.
-
-
-
-xcam:ui_cam_cac_equip_shockcharge
-
-weapon:electroball_grenade_zm
-
-csv:zm_ai_mechz.zpkg
-
-csv:zone_source/zm_dude.zone
-
-
-
-^1ERROR: &#39;veh_parasite&#39; is not a value vehiclesounddef asset
-
-
-
-vehiclesounddef:veh_parasite
-
-vehicle:spawner_bo3_dragon_whelp
-
-csv:hb21_hero_weapons.zpkg
-
-csv:zone_source/zm_dude.zone
-
-
-
-Thanks for everything you do for the community Harry! you the real MVP
+<p>So i downloaded and installed them last night. I thought I had them, but I guess I didn&#39;t or I had an older version. But the error persists :( <br />Same error as before &#39;fx combo texture&#39; something or other.. i also found this up above the usual weapon camo error. Unsure if it&#39;s related but anything that can help at this point :/<br /><br /><br /><br />^1Unable to open xcam file C:\Program Files (x86)\Steam\steamapps\common\Call of Duty Black Ops III\xanim_export\black_ops_3\xcams\ui_cam_cac_equip_shockcharge.xcam_export for xcam ui_cam_cac_equip_shockcharge.<br /><br /><br /><br />xcam:ui_cam_cac_equip_shockcharge<br /><br />weapon:electroball_grenade_zm<br /><br />csv:zm_ai_mechz.zpkg<br /><br />csv:zone_source/zm_dude.zone<br /><br /><br /><br />^1ERROR: &#39;veh_parasite&#39; is not a value vehiclesounddef asset<br /><br /><br /><br />vehiclesounddef:veh_parasite<br /><br />vehicle:spawner_bo3_dragon_whelp<br /><br />csv:hb21_hero_weapons.zpkg<br /><br />csv:zone_source/zm_dude.zone<br /><br /><br /><br />Thanks for everything you do for the community Harry! you the real MVP</p>
 
 ---
 <strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
-Drag the fx folders back from the other assets
-
-As for your other errors they won’t stop linker, just a missing image and xcam
+<p>Drag the fx folders back from the other assets<br /><br />As for your other errors they won’t stop linker, just a missing image and xcam</p>
 
 ---
 <strong><span style="color:#34a7f9;">KillRideMasterJ</span>:</strong>
 
-Thanks a million Harry!!! Worked perfectly!
+<p>Thanks a million Harry!!! Worked perfectly!</p>
 
 ---
 <strong><span style="color:#34a7f9;">eDeK</span>:</strong>
 
-You solved this error?
-
-```php
-UNRECOVERABLE ERROR:
-
-^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering
-```
-I have the same error, how you solved?
+<p>You solved this error?<br /><br />```php
+UNRECOVERABLE ERROR:<br /><br />^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering
+```<br />I have the same error, how you solved?</p>
 
 ---
 <strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
-<blockquote>You solved this error?
-
-```php
-UNRECOVERABLE ERROR:
-
-^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering
-```
-I have the same error, how you solved?
-</blockquote>
-Post the rest of it
+<p><blockquote>You solved this error?<br /><br />```php
+UNRECOVERABLE ERROR:<br /><br />^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering
+```<br />I have the same error, how you solved?<br /></blockquote><br />Post the rest of it</p>
