--- a/wiki/threads/3849.md
+++ b/wiki/threads/3849.md
@@ -29,13 +29,17 @@
 ---
 <strong><span style="color:#34a7f9;">eDeK</span>:</strong>
 
-<p>You solved this error?<br /><br />{% highlight ruby %}
-UNRECOVERABLE ERROR:<br /><br />^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering{% endhighlight %}
-```<br />I have the same error, how you solved?</p>
+<p>You solved this error?<br /><br />{% highlight php %}
+UNRECOVERABLE ERROR:
+
+^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering{% endhighlight %}
+<br />I have the same error, how you solved?</p>
 
 ---
 <strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
-<p><blockquote>You solved this error?<br /><br />{% highlight ruby %}
-UNRECOVERABLE ERROR:<br /><br />^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering{% endhighlight %}
-```<br />I have the same error, how you solved?<br /></blockquote><br />Post the rest of it</p>
+<p><blockquote>You solved this error?<br /><br />{% highlight php %}
+UNRECOVERABLE ERROR:
+
+^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering{% endhighlight %}
+<br />I have the same error, how you solved?<br /></blockquote><br />Post the rest of it</p>
